add profile img source

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <div class="profile-info">
-    <img src="" alt="" class="profile-pic">
+    <img src="{{ url_for('static', filename='ZrC Glitch.png')}} " alt="" class="profile-pic">
     <p class="fullname"></p>
     <p class="username"></p>
     <p class="location"></p>
