--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -2,6 +2,13 @@ body {
     padding-top: 5rem;
 }
 
+main .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .profile-pic {
     width: 10rem;
     height: auto;
