create initial style for profile-info

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -14,3 +14,12 @@ main .container {
     height: 10rem;
     border-radius: 50%;
 }
+
+.profile-info {
+    background-color: hsl(96, 93%, 43%);
+    padding: 5rem 10rem;
+    border-radius: 2rem 2rem 0 0;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
