--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -21,7 +21,7 @@ main .container {
     justify-content: center;
     align-items: center;
     background-color: hsl(96, 93%, 43%);
-    padding: 5rem 10rem;
+    padding: 1rem 7rem 0 7rem;
     border-radius: 2rem 2rem 0 0;
     border-top: 2px solid black;
     border-left: 2px solid black;
