--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,7 @@
+:root {
+    --border-color: hsl(0, 0%, 39%);
+}
+
 body {
     padding-top: 5rem;
 }
@@ -20,10 +24,10 @@ main .container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: hsl(96, 93%, 43%);
+    background-color: hsl(300, 21%, 58%);
     padding: 1rem 7rem 0 7rem;
     border-radius: 2rem 2rem 0 0;
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
+    border-top: 2px solid var(--border-color);
+    border-left: 2px solid var(--border-color);
+    border-right: 2px solid var(--border-color);
 }
