add padding to the various impressions containers

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -41,3 +41,13 @@ main .container {
     display: flex;
     flex-direction: row;
 }
+
+.posts-container,
+.following-container,
+.followers-container {
+    padding: 1rem;
+}
+
+.following-contianer {}
+
+.followers-contianer {}
