change color of text in profile-info

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -30,6 +30,7 @@ main .container {
     border-top: 2px solid var(--border-color);
     border-left: 2px solid var(--border-color);
     border-right: 2px solid var(--border-color);
+    color: white;
 }
 
 .profile-desc {
