--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,9 +1,11 @@
 :root {
     --border-color: hsl(0, 0%, 39%);
+    --font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 }
 
 body {
     padding-top: 5rem;
+    font-family: var(--font-family);
 }
 
 main .container {
@@ -20,6 +22,7 @@ main .container {
 }
 
 .profile-info {
+    text-shadow: 1px 1px 4px black;
     display: flex;
     flex-direction: column;
     justify-content: center;
