--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -39,6 +39,10 @@ main .container {
 .profile-desc {
     display: flex;
     flex-direction: column;
+    border-radius: 0 0 2rem 2rem;
+    border-bottom: 2px solid var(--border-color);
+    border-left: 2px solid var(--border-color);
+    border-right: 2px solid var(--border-color);
 }
 
 .metrics {
