--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -77,6 +77,9 @@ main .container {
 .follow-btn {
     text-align: center;
     width: 10rem;
-    padding: 0 3rem;
+    padding: 0.3rem 3rem;
     font-weight: 800;
+
+    border: 1px solid grey;
+    border-radius: 0.7rem;
 }
