--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -82,4 +82,6 @@ main .container {
 
     border: 1px solid grey;
     border-radius: 0.7rem;
+    background-color: hsl(300, 71%, 45%);
+    color: white;
 }
