--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -43,6 +43,7 @@ main .container {
     width: 30rem;
     flex-direction: column;
     align-items: center;
+    padding: 0 7rem 2rem 7rem;
     border-radius: 0 0 2rem 2rem;
     border-bottom: 2px solid var(--border-color);
     border-left: 2px solid var(--border-color);
