change bio in profile desc

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,7 +9,10 @@
     <p class="join-date">{{ date_joined }}</p>
 </div>
 <div class="profile-desc">
-    <p class="bio">Make Websites, bling!</p>
+    <p class="bio">
+        Focused on developing Web Applications, Android Mobile Applications and
+        software, in general, to the highest degree that I possibly can.
+    </p>
     <div class="metrics">
         <div class="posts-container">
             <p class="posts-val">7</p>
