--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -54,6 +54,8 @@ main .container {
     display: flex;
     flex-direction: row;
     justify-content: center;
+
+    margin: 1rem 0;
 }
 
 .posts-container,
