change color of the titles for each metric

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -80,6 +80,12 @@ main .container {
     font-weight: 750;
 }
 
+.posts-title,
+.following-title,
+.followers-title {
+    color: hsl(0, 0%, 39%);
+}
+
 .follow-btn {
     text-align: center;
     width: 10rem;
