--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -55,7 +55,7 @@ main .container {
     flex-direction: row;
     justify-content: center;
 
-    margin: 1rem 0;
+    margin: 1rem 0 1.5rem;
 }
 
 .posts-container,
