style the fullname in the profile info

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -39,9 +39,15 @@ main .container {
     color: white;
 }
 
+.fullname {
+    font-weight: 600;
+    font-size: 2rem;
+}
+
 .profile-info p {
     line-height: 0.8rem;
 }
+
 
 .profile-desc {
     display: flex;
